discussion/kv_engine/168143/168143_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50124: Add possible stat keys to help text in mcstat

Extend the output from mcstat to print the available stat
keywords (with a _SHORT_ description on their usage).

To ensure that we don't sneak in new undocumented fields
the stats parsing will look up the stat key from this
table.

Change-Id: If521719f3385a4051662ffb32bc5961d234a4bc4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-01-04 08:02:25.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-04 08:06:16.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42569/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42569/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4267/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4267/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4267/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17349/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16274/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16274/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15427/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15427/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24686/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24686/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4325/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4325/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16567/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16567/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36084/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/terminal_size.cc:46:22:
error: no member named "numeric_limits" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36084/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14627/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:46:22: error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
        return {std::numeric_limits<size_t>::max(),
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:46:37: error: unexpected type name "size_t": expected expression [clang-diagnostic-error]
        return {std::numeric_limits<size_t>::max(),
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:46:46: error: no member named "max" in the global namespace [clang-diagnostic-error]
        return {std::numeric_limits<size_t>::max(),
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:47:22: error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
                std::numeric_limits<size_t>::max()};
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:47:37: error: unexpected type name "size_t": expected expression [clang-diagnostic-error]
                std::numeric_limits<size_t>::max()};
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:47:46: error: no member named "max" in the global namespace [clang-diagnostic-error]
                std::numeric_limits<size_t>::max()};
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14627/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/terminal_size.cc:46:22:
error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14627/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13458/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
